--- a/.github/workflows/CodeCheck.yml
+++ b/.github/workflows/CodeCheck.yml
@@ -17,16 +17,14 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
           
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
         
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-        with:
-          arguments: build
+        run: ./gradlew build
         
       - uses: actions/upload-artifact@v2
         name: Upload Artifact
         with:
           name: DenoriaBot.jar
-          path: build/skytopautomizer*.jar
+          path: build/libs/*
