--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -27,7 +27,7 @@ displayName="SkyTop Automizer" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
 displayURL="https://github.com/Norbiros/SkyTopAutomizer/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="examplemod.png" #optional
+logoFile="skytopautomizer.png" #optional
 # A text field displayed in the mod UI
 credits="Thanks for this example mod goes to Norbiros and to SkyTop server where you can use it" #optional
 # A text field displayed in the mod UI
